# mdkv

./: .coverage  .cursorrules  MKVD_overview.md  README.md  gui_test.mdkv  pyproject.toml  run_gui.py
.github/workflows/: ci.yml
demo/: demo.mdkv  gui_run_demo.mdkv  left_full_check.mdkv  smoke_demo.mdkv
docs/: Makefile  architecture.md  cli.md  concept.md  conf.py  format.md  index.rst  license.md  usage.md
docs/_static/: .keep  gui_demo.webm
examples/: README.md  create_doc.py  export_html.py  load_from_yaml.py  logged_workflow.py  record_gui_demo.py  roundtrip.py  search_docs.py  validate_doc.py
mdkv/: __init__.py  cli.py  demo.py  errors.py  export.py  io.py  library.py  model.py  search.py  validate.py
mdkv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mdkv/cli/: main.py
mdkv/common/: __init__.py  logging.py
mdkv/core/: __init__.py  errors.py  model.py  validate.py
mdkv/gui/: __init__.py  server.py
paper/: build_paper_bundle.py  build_paper_bundle.sh  mdkv_paper.md  paper.mdkv
tests/: test_cli.py  test_cli_commands.py  test_cli_extended.py  test_cli_full.py  test_cli_gui.py  test_demo.py  test_export.py  test_export_files.py  test_export_markdown_filter.py  test_gui_api.py  test_gui_api_more.py  test_gui_server.py  test_io.py  test_library.py  test_logging.py  test_model.py  test_model_errors.py  test_model_extras.py  test_model_manage.py  test_search.py  test_search_filters.py  test_services_export.py  test_services_search.py  test_storage_persistence.py  test_validate.py  test_validate_errors.py
(+43 files in other folders)
