[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdkv"
version = "0.1.0"
description = "MDKV: Multitrack Markdown Container (zip-based) with tracks, metadata, validation, search, and export"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MDKV Authors" }]
dependencies = [
  "click>=8.1.3",
  "pyyaml>=6.0.1",
  "markdown-it-py>=3.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1.0",
  "sphinx>=7.0.0",
  "myst-parser>=2.0.0",
  "sphinx-autodoc-typehints>=1.25.2",
]

[project.scripts]
mdkv = "mdkv.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdkv*"]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "fastapi[test]>=0.116.1",
    "httpx>=0.28.1",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "starlette>=0.47.2",
]


